Fixed About component - getting data from a mock server now

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,19 @@
   font-size: 1.5em;
 }
 
+.menu-link.active {
+  color: yellow;
+}
+
+.menu-link {
+  color: white;
+  font-size: large;
+  text-decoration: none;
+  padding: 10px;
+}
+
+
+
 .App-intro {
   font-size: large;
 }
